0.4.10: Fix message header aligning

--- a/styles/thread.less
+++ b/styles/thread.less
@@ -21,6 +21,7 @@
 			line-height: 1.2;
 			color: @berend-text-color-headers;
 			flex: 1;
+			vertical-align: top;
 		}
 	}
 
